--- a/blog-single.html
+++ b/blog-single.html
@@ -80,7 +80,7 @@
                                 Hi i’m
                                 <div class="typing-title">
                                     <p>a <strong>web developer.</strong></p>
-                                    <p>a <strong>web Designer.</strong></p>
+                                    <p>a <strong>Algorithm programmer.</strong></p>
                                     <p>a <strong>photographer.</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
