--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Email:</strong>  mahirarashid@gmail.com</li>
+                                                <li><strong>Email:</strong>  gaohan2021@email.szu.edu.cn</li>
                                                 <li><strong>Freelance:</strong>  Available</li>
                                             </ul>
                                         </div>
@@ -230,8 +230,8 @@
                                             <div class="timeline-block">
                                                 <div class="inner-box">
                                                     <h4>Web Design</h4>
-                                                    <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="date"><span>1998-2000</span> / Shenzhen University </div>
+                                                    <div class="text">Millimeter-Wave Antenna Engineering research center. </div>
                                                 </div>
                                             </div>
 
@@ -239,8 +239,8 @@
                                             <div class="timeline-block">
                                                 <div class="inner-box">
                                                     <h4>Web Development</h4>
-                                                    <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="date"><span>1998-2000</span> / Shenzhen University</div>
+                                                    <div class="text">Millimeter-Wave Antenna Engineering research center. </div>
                                                 </div>
                                             </div>
 
@@ -248,8 +248,8 @@
                                             <div class="timeline-block">
                                                 <div class="inner-box">
                                                     <h4>Specialization Course</h4>
-                                                    <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <div class="date"><span>1998-2000</span> / Shenzhen University</div>
+                                                    <div class="text">Millimeter-Wave Antenna Engineering research center. </div>
                                                 </div>
                                             </div>
                                             
