--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
                                 <div class="image"><img src="images/resource/user.png" alt=""></div>
                                 <div class="author">
-                                    <h3>Mahira Rashid</h3>
+                                    <h3>Gao Han</h3>
                                     <div class="designation">
                                         Hi i’m
                                         <div class="typing-title">
@@ -147,14 +147,15 @@
                         <div class="card-about card-item" id="about" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
                                 <h4 class="title">About Me</h4>
+<!--About me页面代码 -->
                                 <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip commodo reprehenderit.</div>
                                 <div class="info-list">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Name:</strong>  Mahira Rashid</li>
-                                                <li><strong>Phone:</strong>  254 - 2563 - 2154</li>
-                                                <li><strong>Address:</strong>  San francisco, USA</li>
+                                                <li><strong>Name:</strong>  Gao Han</li>
+                                                <li><strong>Phone:</strong>  188 - 3201 - XXXX</li>
+                                                <li><strong>Address:</strong>  ShenZhen, China</li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
@@ -294,6 +295,7 @@
                         </div>
                         <!-- end item -->
                         <!-- card item -->
+<!--services部分代码 -->
                         <div class="card-services card-item" id="services" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
                                 <h4 class="title">Services</h4>
@@ -507,6 +509,7 @@
                             </div>
                         </div>
                         <!-- end item -->
+<!--contact部分代码 -->
                         <!-- card item -->
                         <div class="card-contact card-item" id="contact" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
@@ -515,9 +518,9 @@
                                 <div class="row clearfix">
                                     <div class="col-md-6">
                                         <ul class="list-style-two">
-                                            <li><span class="icon flaticon-signs"></span>PO Box 16122 Collins Street <br> West Victoria 8007 Canada </li>
-                                            <li><span class="icon flaticon-smartphone"></span>(+48) 564-334-21-22-34 <br>(+48) 564-334-21-25</li>
-                                            <li><span class="icon flaticon-note-1"></span>info@cretox.com <br>info@example.com</li>
+                                            <li><span class="icon flaticon-signs"></span> 1688 Nanhai Street <br> Guangdong Shenzhen China </li>
+                                            <li><span class="icon flaticon-smartphone"></span>(+86) 564-334-21-22-34 <br>(+86) 564-334-21-25</li>
+                                            <li><span class="icon flaticon-note-1"></span>1269277935@qq.com <br>gaohan2021@email.szu.edu.cn</li>
                                         </ul>
                                     </div>
                                     <div class="col-md-6">
