--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
                                 <div class="image"><img src="images/resource/user.png" alt=""></div>
                                 <div class="author">
-                                    <h3>Gao Han</h3>
+                                    <h3>高 晗</h3>
                                     <div class="designation">
                                         Hi i’m
                                         <div class="typing-title">
@@ -126,7 +126,7 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">广东省移动终端微波毫米波天线工程技术研究中心.</div>
+                                <div class="text">广东省移动终端微波毫米波天线工程技术研究中心</div>
                                 <div class="link-btn">
                                     <a href="#" class="theme-btn btn-style-one">Download CV</a>
                                     <a href="#" class="theme-btn btn-style-two">Hire Me</a>
